Creacion de los servicios de ceremonias - peticiones. Se ajustan los status para images y demas.